Fixed column spacing on category boxes

--- a/common/common.scss
+++ b/common/common.scss
@@ -135,7 +135,7 @@ a {
 
 .category-boxes {
   display: grid;
-  grid-gap: 2em;
+  grid-gap: 1.5em;
   grid-template-columns: 32% 32% 32%;
   @include border-radius;
   .category-box {
